--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
   <head>
-    <title>Sample</title>
-    <script src="script01.js"></script>
-    <body>
-      <h3>Javacript samples</h3>
-    </body>
+    <title>Samples</title>
+    <!-- <script src="script01.js"></script> -->
+    <!-- <script src="script02.js"></script> -->
+    <!-- <script src="03-scopechain.js"></script> -->
+    <!-- <script src="04-datatypes.js"></script> -->
+    <!-- <script src="05-coercion.js"></script> -->
+    <script src="06-default-values.js"></script>
   </head>
+  <body>
+    <h4>Javascript Samples</h4>
+  </body>
 </html>
