--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <html>
   <head>
     <title>Samples</title>
-    <!-- <script src="script01.js"></script> -->
-    <!-- <script src="script02.js"></script> -->
+    <!-- <script src="01-script.js"></script> -->
+    <!-- <script src="02-script.js"></script> -->
     <!-- <script src="03-scopechain.js"></script> -->
     <!-- <script src="04-datatypes.js"></script> -->
     <!-- <script src="05-coercion.js"></script> -->
-    <script src="06-default-values.js"></script>
+    <!--<script src="06-default-values.js"></script>-->
+    <!-- <script src="07-object.js"></script> -->
+    <!-- <script src="08-object-literals.js"></script> -->
+    <!-- <script src="09-json.js"></script> -->
+    <!-- <script src="10-functions-object.js"></script> -->
+    <!-- <script src="11-function-se.js"></script> -->
+    <!-- <script src="12-function-se-2.js"></script> -->
+    <!-- <script src="13-this.js"></script> -->
+    <!-- <script src="14-arrays.js"></script> -->
+    <!-- <script src="15-arguments.js"></script> -->
+
+    <script src="16-iifes.js"></script>
   </head>
   <body>
     <h4>Javascript Samples</h4>
