--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!-- <script src="13-this.js"></script> -->
     <!-- <script src="14-arrays.js"></script> -->
     <!-- <script src="15-arguments.js"></script> -->
-
-    <script src="16-iifes.js"></script>
+    <!-- <script src="16-iifes.js"></script> -->
+    <script src="17-closures.js"></script>
   </head>
   <body>
     <h4>Javascript Samples</h4>
