--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
     <!-- <script src="14-arrays.js"></script> -->
     <!-- <script src="15-arguments.js"></script> -->
     <!-- <script src="16-iifes.js"></script> -->
-    <script src="17-closures.js"></script>
+    <!-- <script src="17-closures.js"></script> -->
+    <!-- <script src="18-closures.js"></script> -->
+    <!-- <script src="19-sayhi-later.js"></script> -->
+    <!-- <script src="20-call-apply-bind.js"></script> -->
+    <!-- <script src="21-func-prog.js"></script> -->
+    <!-- 
+    <script src="underscore-umd.js"></script>
+    <script src="22-underscore-demos.js"></script> -->
+
+    <script src="23-prototypal-inheritance-1.js"></script>
   </head>
   <body>
     <h4>Javascript Samples</h4>
