--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <script src="underscore-umd.js"></script>
     <script src="22-underscore-demos.js"></script> -->
 
-    <script src="23-prototypal-inheritance-1.js"></script>
+    <!-- <script src="23-prototypal-inheritance-1.js"></script> -->
+    <!-- <script src="24-function-constructor.js"></script> -->
+    <!-- <script src="25-object-create.js"></script> -->
+    <script src="26-classes.js"></script>
   </head>
   <body>
     <h4>Javascript Samples</h4>
